--- a/build.properties
+++ b/build.properties
@@ -5,7 +5,7 @@
 
 
 sf.username_dev = jsweet2@unum.com.dev
-sf.password_dev = 
+sf.password_dev = MayThe4thXzuohP5ulmw9FznJOIjYIfYtJ
 
 
 #sf.pkgName = <Insert comma separated package names to be retrieved>
